# kitsune

./: .devshell_prompt.sh  .dockerignore  .env  .gitignore  .gitmodules  .npmrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.prod  LICENSE  LICENSE-MIT  LICENSE.md  README.md  SECURITY.md  _typos.toml  clippy.toml  config.docker.toml  config.example.dhall  config.example.toml  deny.toml  dist-workspace.toml  docker-compose.yml  flake.nix  module.nix  oranda-workspace.json  oranda.json  overlay.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  regenerate-entities.sh  rust-toolchain.toml  system-md-example.service  theme.css
crates/kitsune-activitypub/: Cargo.toml  LICENSE-AGPL-3.0
crates/kitsune-activitypub/src/: deliverer.rs  error.rs  fetcher.rs  inbox_resolver.rs  lib.rs
crates/kitsune-activitypub/tests/: integration.rs
crates/kitsune-blocking/: Cargo.toml
crates/kitsune-blocking/src/: lib.rs
crates/kitsune-cache/: Cargo.toml
crates/kitsune-cache/src/: error.rs  in_memory.rs  lib.rs  redis.rs
crates/kitsune-captcha/: Cargo.toml  README.md
crates/kitsune-captcha/src/: error.rs  hcaptcha.rs  lib.rs  mcaptcha.rs
crates/kitsune-config/: Cargo.toml
crates/kitsune-config/src/: cache.rs  captcha.rs  database.rs  email.rs  embed.rs  instance.rs  job_queue.rs  language_detection.rs  lib.rs  messaging.rs  mrf.rs  oidc.rs  open_telemetry.rs  proxy.rs  search.rs  server.rs  storage.rs  url.rs
crates/kitsune-core/: Cargo.toml  build.rs
crates/kitsune-core/src/: blocking.rs  config.rs  consts.rs  error.rs  lib.rs  state.rs  traits.rs  util.rs  webfinger.rs
crates/kitsune-db/: Cargo.toml  diesel.toml
crates/kitsune-db/src/: error.rs  function.rs  json.rs  lang.rs  lib.rs  pool.rs  post_permission_check.rs  schema.rs  tls.rs
crates/kitsune-db/tests/: unicode_collation.rs
crates/kitsune-email/: Cargo.toml
crates/kitsune-email/src/: error.rs  lib.rs  service.rs  traits.rs
crates/kitsune-email/templates/: verify.mjml
crates/kitsune-embed/: Cargo.toml
crates/kitsune-embed/src/: lib.rs
crates/kitsune-error/: Cargo.toml
crates/kitsune-error/src/: axum.rs  ext.rs  lib.rs
crates/kitsune-federation-filter/: Cargo.toml
crates/kitsune-federation-filter/src/: error.rs  lib.rs
kitsune/: .prettierignore  .prettierrc  Cargo.toml  Dockerfile.dev  Dockerfile.prod  build.rs  package.json  tailwind.config.ts  theme.ts
kitsune-cache/: Cargo.toml
kitsune-cache/src/: error.rs  in_memory.rs  lib.rs  redis.rs
kitsune-cli/: Cargo.toml  build.rs
kitsune-cli/src/: config.rs  main.rs  role.rs
kitsune-db/: Cargo.toml  diesel.toml
kitsune-db/common/: Cargo.toml
kitsune-db/common/src/: generated_column.rs  lib.rs  tsvector_column.rs  types.rs
kitsune-db/migration/: Cargo.toml
kitsune-db/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20221121_210920_create_oauth2_tables.rs  m20221127_194924_create_media_attachment_tables.rs  m20221213_214258_create_mention_table.rs  m20221213_215428_create_favourites_table.rs  m20221213_220058_create_repost_table.rs  m20221220_215922_create_roles_table.rs  m20230416_173244_create_blocks_table.rs  m20230416_200210_create_home_timeline_indices.rs  m20230518_131405_sql_full_text_search.rs
kitsune-db/migrations/2023-05-19-192931_initial_tables/: down.sql  up.sql
kitsune-db/migrations/2023-05-19-223636_create_oauth2_tables/: down.sql  up.sql
kitsune-db/migrations/2023-05-19-230408_create_media_attachment_tables/: down.sql  up.sql
kitsune-db/migrations/2023-05-19-232008_create_roles_tables/: down.sql
kitsune-db/src/: column.rs  function.rs  json.rs  lib.rs  macros.rs  post_permission_check.rs  schema.rs
kitsune-email/: Cargo.toml
kitsune-email/src/: error.rs  lib.rs  traits.rs
kitsune-email/templates/: verify.mjml
kitsune-embed/: Cargo.toml
kitsune-embed/src/: lib.rs
kitsune-http-client/: Cargo.toml
kitsune-http-client/src/: lib.rs
kitsune-http-client/tests/: basic.rs  json.rs
kitsune-http-signatures/: Cargo.toml
kitsune-http-signatures/src/: error.rs  header.rs  lib.rs  util.rs
kitsune-http-signatures/tests/: all_headers.rs  basic.rs  data.rs  sign.rs
kitsune-job/: Cargo.toml
kitsune-job-runner/: Cargo.toml
kitsune-job-runner/src/: db_queue.rs  lib.rs  main.rs
kitsune-job/examples/: basic.rs
kitsune-job/lua/: copy_scheduled.lua
kitsune-job/src/: error.rs  lib.rs  macros.rs  main.rs
kitsune-messaging/: Cargo.toml  README.md
kitsune-messaging/examples/: simple.rs  simple_redis.rs  simple_tokio_broadcast.rs
kitsune-messaging/src/: lib.rs  redis.rs  tokio_broadcast.rs
kitsune-search/: .env  Cargo.toml  Dockerfile.dev  Dockerfile.prod  README.md  build.rs
kitsune-search-server/: .env  .gitignore  Cargo.toml  Dockerfile.dev  Dockerfile.prod  README.md
kitsune-search-server/proto/: Cargo.toml
kitsune-search-server/src/: lib.rs  main.rs
kitsune-search-server/tests/: common.rs  post.rs
kitsune-search/proto/: Cargo.toml  build.rs  common.proto  index.proto  search.proto
kitsune-search/src/: config.rs  grpc.rs  lib.rs  main.rs  meilisearch.rs  sql.rs  util.rs
kitsune-search/tests/: account.rs  common.rs  post.rs
kitsune-storage/: Cargo.toml  README.md
kitsune-storage/examples/: s3.rs
kitsune-storage/src/: fs.rs  lib.rs  s3.rs
kitsune-type/: Cargo.toml
kitsune-type/src/: lib.rs  webfinger.rs
kitsune-type/tests/: nodeinfo_2.1.json
kitsune-uuid/: Cargo.toml
kitsune-uuid/src/: lib.rs
kitsune/assets/: app.css  template.scss
kitsune/config/: types.dhall
kitsune/src/: cache.rs  config.rs  consts.rs  error.rs  lib.rs  main.rs  oidc.rs  sanitize.rs  search.rs  signal.rs  state.rs  template.rs  test.rs  util.rs  webfinger.rs
kitsune/styles/: app.css
kitsune/templates/: base.html  fallback-fallback.html  token.html
post-process/: Cargo.toml
post-process/grammar/: post.pest
post-process/src/: lib.rs
post-process/tests/: emote.rs  hashtag.rs  link.rs  mention.rs  mixed.rs  transformation.rs
src/: main.rs  (+9 more)
xtask/: Cargo.toml
xtask/src/: build_scss.rs  clean.rs  download_ap_fixture.rs  fmt_toml.rs  main.rs  util.rs  watch.rs
(+1425 files in other folders)
