[package]
name = "kitsune-cache"
edition = "2021"
version.workspace = true

[dependencies]
async-trait = "0.1.72"
dashmap = "5.5.0"
deadpool-redis = "0.12.0"
derive_builder = "0.12.0"
enum_dispatch = "0.3.12"
redis = "0.23.1"
serde = "1.0.180"
simd-json = "0.10.4"
thiserror = "1.0.44"
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["macros", "rt"] }
