[package]
name = "kitsune-cache"
edition = "2021"
version.workspace = true

[dependencies]
async-trait = "0.1.73"
dashmap = "5.5.0"
deadpool-redis = "0.12.0"
derive_builder = "0.12.0"
enum_dispatch = "0.3.12"
redis = "0.23.2"
serde = "1.0.183"
simd-json = "0.10.5"
thiserror = "1.0.44"
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.31.0", features = ["macros", "rt"] }
