[package]
name = "kitsune-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.wix]
upgrade-guid = "566D09AC-E247-4490-B8BB-A16DB4E225DF"
path-guid = "C4B5AB67-2450-4A98-8AE7-C22648BF18FE"
license = false
eula = false

[dependencies]
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
color-eyre = "0.6.3"
diesel = { workspace = true }
diesel-async = { workspace = true }
dotenvy = "0.15.7"
envy = "0.4.2"
kitsune-config = { path = "../crates/kitsune-config" }
kitsune-core = { version = "0.0.1-pre.6", path = "../crates/kitsune-core" }
kitsune-db = { path = "../crates/kitsune-db" }
kitsune-error = { path = "../crates/kitsune-error" }
serde = { version = "1.0.202", features = ["derive"] }
speedy-uuid = { path = "../lib/speedy-uuid" }
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.18"

[build-dependencies]
vergen = { version = "8.3.1", features = ["build", "git", "gitcl"] }

[lints]
workspace = true
