[package]
name = "kitsune-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.wix]
upgrade-guid = "566D09AC-E247-4490-B8BB-A16DB4E225DF"
path-guid = "C4B5AB67-2450-4A98-8AE7-C22648BF18FE"
license = false
eula = false

[dependencies]
clap = { workspace = true }
color-eyre = "0.6.3"
diesel = { workspace = true }
diesel-async = { workspace = true }
dotenvy = "0.15.7"
envy = "0.4.2"
kitsune-config = { workspace = true }
kitsune-core = { workspace = true }
kitsune-db = { workspace = true }
kitsune-error = { workspace = true }
serde = { version = "1.0.210", features = ["derive"] }
speedy-uuid = { workspace = true }
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.18"

[lints]
workspace = true
