[package]
name = "kitsune-db"
version.workspace = true
edition = "2021"
build = "build.rs"

[dependencies]
derive_builder = "0.12.0"
diesel = { version = "2.1.0", features = ["serde_json", "time", "uuid"] }
diesel-async = { version = "0.3.0", features = ["deadpool", "postgres"] }
diesel_full_text_search = { version = "2.1.0", default-features = false }
diesel_migrations_async = { git = "https://github.com/aumetra/diesel_migrations_async.git", rev = "296db45f2b2120a496f7231537685fe5974c0829", features = [
    "postgres",
] }
kitsune-type = { path = "../kitsune-type" }
num-derive = "0.3.3"
num-traits = "0.2.15"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
time = "0.3.21"
tracing-log = "0.1.3"
uuid = "1.3.3"
