[package]
name = "kitsune-db"
version.workspace = true
edition = "2021"
build = "build.rs"

[dependencies]
derive_builder = "0.12.0"
diesel = { version = "2.1.0", features = ["uuid"] }
diesel-async = { version = "0.3.1", features = ["deadpool", "postgres"] }
diesel_full_text_search = { version = "2.1.0", default-features = false }
diesel_migrations_async = { git = "https://github.com/aumetra/diesel_migrations_async.git", rev = "296db45f2b2120a496f7231537685fe5974c0829", features = [
    "postgres",
] }
iso8601-timestamp = { version = "0.2.10", features = ["diesel-pg"] }
kitsune-type = { path = "../kitsune-type" }
num-derive = "0.3.3"
num-traits = "0.2.15"
serde = { version = "1.0.164", features = ["derive"] }
simd-json = "0.10.3"
thiserror = "1.0.40"
tracing-log = "0.1.3"
uuid = "1.3.4"
